Remove test constructors from real classes