@@ -14,24 +14,18 @@ import org.humancellatlas.ingest.submission.SubmissionEnvelope;
 import org.humancellatlas.ingest.submission.SubmissionEnvelopeRepository;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.autoconfigure.data.mongo.AutoConfigureDataMongo;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
 
-@ExtendWith(SpringExtension.class)
 @SpringBootTest
-@AutoConfigureMockMvc(printOnlyOnFailure = false)
+@AutoConfigureDataMongo()
 public class SubmissionLinkMapControllerTest {
     @Autowired
     private SubmissionLinkMapController controller;
@@ -71,49 +65,49 @@ public class SubmissionLinkMapControllerTest {
         //given:
         SubmissionEnvelope submissionEnvelope = new SubmissionEnvelope("link-map-test");
 
-        Biomaterial donor = new Biomaterial("donor");
-        Biomaterial specimen = new Biomaterial("specimen");
-        Biomaterial cellSuspension = new Biomaterial("cellSuspension");
+        Biomaterial donor = biomaterialRepository.save(new Biomaterial(null));
+        Biomaterial specimen = biomaterialRepository.save(new Biomaterial(null));
+        Biomaterial cellSuspension = biomaterialRepository.save(new Biomaterial(null));
 
-        Process process1 = new Process("donor-specimen-process");
-        Process process2 = new Process("cellSuspension-sequenceFile-process");
-        Process process3 = new Process("sequenceFile-analysisFile-process");
+        Process donorSpecimen = processRepository.save(new Process(null));
+        Process cellSuspensionSequenceFile = processRepository.save(new Process(null));
+        Process sequenceFileAnalysisFile = processRepository.save(new Process(null));
 
-        Protocol collectionProtocol = new Protocol("collectionProtocol");
-        Protocol sequencingProtocol = new Protocol("sequencingProtocol");
-        Protocol analysisProtocol = new Protocol("analysisProtocol");
+        Protocol collectionProtocol = protocolRepository.save(new Protocol(null));
+        Protocol sequencingProtocol = protocolRepository.save(new Protocol(null));
+        Protocol analysisProtocol = protocolRepository.save(new Protocol(null));
 
-        File sequencingFile = new File("sequenceFile");
-        File analysisFile = new File("analysisFile");
+        File sequencingFile = fileRepository.save(new File(null, "sequenceFile"));
+        File analysisFile = fileRepository.save(new File(null, "analysisFile"));
 
         donor.setSubmissionEnvelope(submissionEnvelope);
         specimen.setSubmissionEnvelope(submissionEnvelope);
         cellSuspension.setSubmissionEnvelope(submissionEnvelope);
-        process1.setSubmissionEnvelope(submissionEnvelope);
-        process2.setSubmissionEnvelope(submissionEnvelope);
-        process3.setSubmissionEnvelope(submissionEnvelope);
+        donorSpecimen.setSubmissionEnvelope(submissionEnvelope);
+        cellSuspensionSequenceFile.setSubmissionEnvelope(submissionEnvelope);
+        sequenceFileAnalysisFile.setSubmissionEnvelope(submissionEnvelope);
         collectionProtocol.setSubmissionEnvelope(submissionEnvelope);
         sequencingProtocol.setSubmissionEnvelope(submissionEnvelope);
         analysisProtocol.setSubmissionEnvelope(submissionEnvelope);
         sequencingFile.setSubmissionEnvelope(submissionEnvelope);
         analysisFile.setSubmissionEnvelope(submissionEnvelope);
 
-        specimen.addAsDerivedByProcess(process1);
-        sequencingFile.addAsDerivedByProcess(process2);
-        analysisFile.addAsDerivedByProcess(process3);
+        specimen.addAsDerivedByProcess(donorSpecimen);
+        sequencingFile.addAsDerivedByProcess(cellSuspensionSequenceFile);
+        analysisFile.addAsDerivedByProcess(sequenceFileAnalysisFile);
 
-        donor.addAsInputToProcess(process1);
-        cellSuspension.addAsInputToProcess(process2);
-        sequencingFile.addAsInputToProcess(process3);
+        donor.addAsInputToProcess(donorSpecimen);
+        cellSuspension.addAsInputToProcess(cellSuspensionSequenceFile);
+        sequencingFile.addAsInputToProcess(sequenceFileAnalysisFile);
 
-        process1.addProtocol(collectionProtocol);
-        process2.addProtocol(sequencingProtocol);
-        process3.addProtocol(analysisProtocol);
+        donorSpecimen.addProtocol(collectionProtocol);
+        cellSuspensionSequenceFile.addProtocol(sequencingProtocol);
+        sequenceFileAnalysisFile.addProtocol(analysisProtocol);
 
         submissionEnvelopeRepository.save(submissionEnvelope);
         biomaterialRepository.saveAll(List.of(donor, specimen, cellSuspension));
         protocolRepository.saveAll(List.of(collectionProtocol, sequencingProtocol, analysisProtocol));
-        processRepository.saveAll(List.of(process1, process2, process3));
+        processRepository.saveAll(List.of(donorSpecimen, cellSuspensionSequenceFile, sequenceFileAnalysisFile));
         fileRepository.saveAll(List.of(sequencingFile, analysisFile));
 
         //when:
@@ -121,17 +115,17 @@ public class SubmissionLinkMapControllerTest {
 
         //then:
         assertThat(submissionLinkMap).isNotNull();
-        assertThat(submissionLinkMap.processes.get("donor-specimen-process").protocols).isEqualTo(new HashSet<>(Arrays.asList("collectionProtocol")));
-        assertThat(submissionLinkMap.processes.get("donor-specimen-process").inputBiomaterials).isEqualTo(new HashSet<>(Arrays.asList("donor")));
-        assertThat(submissionLinkMap.processes.get("cellSuspension-sequenceFile-process").protocols).isEqualTo(new HashSet<>(Arrays.asList("sequencingProtocol")));
-        assertThat(submissionLinkMap.processes.get("cellSuspension-sequenceFile-process").inputBiomaterials).isEqualTo(new HashSet<>(Arrays.asList("cellSuspension")));
-        assertThat(submissionLinkMap.processes.get("cellSuspension-sequenceFile-process").inputFiles).isEmpty();
-        assertThat(submissionLinkMap.processes.get("sequenceFile-analysisFile-process").protocols).isEqualTo(new HashSet<>(Arrays.asList("analysisProtocol")));
-        assertThat(submissionLinkMap.processes.get("sequenceFile-analysisFile-process").inputBiomaterials).isEmpty();
-        assertThat(submissionLinkMap.processes.get("sequenceFile-analysisFile-process").inputFiles).isEqualTo(new HashSet<>(Arrays.asList("sequenceFile")));
-        assertThat(submissionLinkMap.biomaterials.get("donor").inputToProcesses).isEqualTo(new HashSet<>(Arrays.asList("donor-specimen-process")));
-        assertThat(submissionLinkMap.biomaterials.get("cellSuspension").inputToProcesses).isEqualTo(new HashSet<>(Arrays.asList("cellSuspension-sequenceFile-process")));
-        assertThat(submissionLinkMap.files.get("sequenceFile").inputToProcesses).isEqualTo(new HashSet<>(Arrays.asList("sequenceFile-analysisFile-process")));
+        assertThat(submissionLinkMap.processes.get(donorSpecimen.getId()).protocols).isEqualTo(new HashSet<>(List.of(collectionProtocol.getId())));
+        assertThat(submissionLinkMap.processes.get(donorSpecimen.getId()).inputBiomaterials).isEqualTo(new HashSet<>(List.of(donor.getId())));
+        assertThat(submissionLinkMap.processes.get(cellSuspensionSequenceFile.getId()).protocols).isEqualTo(new HashSet<>(List.of(sequencingProtocol.getId())));
+        assertThat(submissionLinkMap.processes.get(cellSuspensionSequenceFile.getId()).inputBiomaterials).isEqualTo(new HashSet<>(List.of(cellSuspension.getId())));
+        assertThat(submissionLinkMap.processes.get(cellSuspensionSequenceFile.getId()).inputFiles).isEmpty();
+        assertThat(submissionLinkMap.processes.get(sequenceFileAnalysisFile.getId()).protocols).isEqualTo(new HashSet<>(List.of(analysisProtocol.getId())));
+        assertThat(submissionLinkMap.processes.get(sequenceFileAnalysisFile.getId()).inputBiomaterials).isEmpty();
+        assertThat(submissionLinkMap.processes.get(sequenceFileAnalysisFile.getId()).inputFiles).isEqualTo(new HashSet<>(List.of(sequencingFile.getId())));
+        assertThat(submissionLinkMap.biomaterials.get(donor.getId()).inputToProcesses).isEqualTo(new HashSet<>(List.of(donorSpecimen.getId())));
+        assertThat(submissionLinkMap.biomaterials.get(cellSuspension.getId()).inputToProcesses).isEqualTo(new HashSet<>(List.of(cellSuspensionSequenceFile.getId())));
+        assertThat(submissionLinkMap.files.get(sequencingFile.getId()).inputToProcesses).isEqualTo(new HashSet<>(List.of(sequenceFileAnalysisFile.getId())));
     }
 
 }
